--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,34 +7,30 @@ jobs:
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    name: Run Type Check & Linters
+    name: Run Type Check, Linters & Format Check
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-
-      - name: Install pnpm
-        uses: pnpm/action-setup@v2.2.4
-        with:
-          version: 7
+        uses: actions/checkout@v2
 
       - name: Set up Node
         uses: actions/setup-node@v3
         with:
-          node-version: lts/*
-          cache: 'pnpm'
+          node-version: '18'
+          cache: 'npm'
 
       - name: Install dependencies
-        run: pnpm install
+        run: npm ci 
 
       - name: Check types
-        run: pnpm type-check
+        run: npm run type-check
 
       - name: Check linting
-        run: pnpm lint
+        run: npm run lint
+
+      - name: Check formatting
+        run: npm run format:check  # Running the format check script
 
       - name: Check commits messages
         uses: wagoid/commitlint-github-action@v5
