--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "type-check": "tsc --noEmit",
     "lint": "eslint --ignore-path .gitignore \"src/**/*.+(ts|js|tsx)\"",
     "format": "prettier --ignore-path .gitignore \"src/**/*.+(ts|js|tsx)\" --write",
+    "format:check": "prettier --ignore-path .gitignore \"src/**/*.+(ts|js|tsx)\" --check",
     "postinstall": "husky install"
   },
   "lint-staged": {
