feat: manuel deply container

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -79,8 +79,8 @@ jobs:
           GCP_CREDENTIALS: ${{ secrets.GCP_CREDENTIALS }}
         run: |
           echo "$GCP_CREDENTIALS" | docker login -u _json_key --password-stdin https://gcr.io
-          docker build -t ${{ env.IMAGE_URL }}:production-${{ github.sha }} .
-          docker push ${{ env.IMAGE_URL }}:production-${{ github.sha }}
+          docker build -t ${{ env.IMAGE_URL }}:staging-${{ github.sha }} .
+          docker push ${{ env.IMAGE_URL }}:staging-${{ github.sha }}
 
       - name: Deploy to Cloud Run (Staging)
         run: |
