feat: docker env

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -74,13 +74,22 @@ jobs:
           service_account_key: ${{ secrets.GCP_CREDENTIALS }}
           export_default_credentials: true
 
-      - name: Build and push Docker image to GCR
+      - name: Build and push Docker image to GCR (Staging)
         env:  # Ensure that the secret is only used where needed
           GCP_CREDENTIALS: ${{ secrets.GCP_CREDENTIALS }}
+          NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}
+          NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}
+          NEXT_PUBLIC_NODE_ENV: ${{ secrets.NEXT_PUBLIC_NODE_ENV }}
+          NEXT_PUBLIC_BASE_URL: ${{ secrets.NEXT_PUBLIC_BASE_URL }}
         run: |
           echo "$GCP_CREDENTIALS" | docker login -u _json_key --password-stdin https://gcr.io
-          docker build -t ${{ env.IMAGE_URL }}:staging-${{ github.sha }} .
+          docker build --build-arg NEXT_PUBLIC_SUPABASE_ANON_KEY \
+                      --build-arg NEXT_PUBLIC_SUPABASE_URL \
+                      --build-arg NEXT_PUBLIC_NODE_ENV \
+                      --build-arg NEXT_PUBLIC_BASE_URL \
+                      -t ${{ env.IMAGE_URL }}:staging-${{ github.sha }} .
           docker push ${{ env.IMAGE_URL }}:staging-${{ github.sha }}
+
 
       - name: Deploy to Cloud Run (Staging)
         run: |
@@ -128,12 +137,20 @@ jobs:
           service_account_key: ${{ secrets.GCP_CREDENTIALS }}
           export_default_credentials: true
 
-      - name: Build and push Docker image to GCR
+      - name: Build and push Docker image to GCR (Production)
         env:  # Ensure that the secret is only used where needed
           GCP_CREDENTIALS: ${{ secrets.GCP_CREDENTIALS }}
+          NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY_PROD }}  # Example if you have different values for prod
+          NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.NEXT_PUBLIC_SUPABASE_URL_PROD }}
+          NEXT_PUBLIC_NODE_ENV: ${{ secrets.NEXT_PUBLIC_NODE_ENV_PROD }}
+          NEXT_PUBLIC_BASE_URL: ${{ secrets.NEXT_PUBLIC_BASE_URL_PROD }}
         run: |
           echo "$GCP_CREDENTIALS" | docker login -u _json_key --password-stdin https://gcr.io
-          docker build -t ${{ env.IMAGE_URL }}:production-${{ github.sha }} .
+          docker build --build-arg NEXT_PUBLIC_SUPABASE_ANON_KEY \
+                      --build-arg NEXT_PUBLIC_SUPABASE_URL \
+                      --build-arg NEXT_PUBLIC_NODE_ENV \
+                      --build-arg NEXT_PUBLIC_BASE_URL \
+                      -t ${{ env.IMAGE_URL }}:production-${{ github.sha }} .
           docker push ${{ env.IMAGE_URL }}:production-${{ github.sha }}
 
       - name: Deploy to Cloud Run (Production)
