--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "antd": "5.6.4",
     "autoprefixer": "10.4.15",
     "axios": "1.4.0",
+    "clsx": "2.1.1",
     "cookies-next": "2.1.2",
     "dayjs": "1.11.10",
     "moment": "2.29.4",
@@ -36,6 +37,7 @@
     "react-dom": "18.2.0",
     "react-otp-input": "3.0.2",
     "sass": "1.69.1",
+    "tailwind-merge": "2.3.0",
     "tailwindcss": "3.3.3",
     "uuid": "9.0.1",
     "uuidv4": "6.2.13"
