--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   "dependencies": {
     "@ant-design/icons": "5.1.4",
     "@supabase/supabase-js": "2.38.1",
+    "@tanstack/react-query": "5.32.1",
+    "@tanstack/react-query-devtools": "5.32.1",
     "antd": "5.6.4",
     "autoprefixer": "10.4.15",
     "axios": "1.4.0",
