--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "clsx": "2.1.1",
     "cookies-next": "2.1.2",
     "dayjs": "1.11.10",
-    "moment": "2.29.4",
     "next": "13.2.4",
     "next-auth": "4.22.1",
     "postcss": "8.4.28",
@@ -41,8 +40,7 @@
     "sass": "1.69.1",
     "tailwind-merge": "2.3.0",
     "tailwindcss": "3.3.3",
-    "uuid": "9.0.1",
-    "uuidv4": "6.2.13"
+    "uuid": "9.0.1"
   },
   "devDependencies": {
     "@commitlint/cli": "17.5.1",
@@ -51,6 +49,7 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.32",
     "@types/react-dom": "18.0.11",
+    "@types/uuid": "9.0.8",
     "@typescript-eslint/eslint-plugin": "5.57.0",
     "@typescript-eslint/parser": "5.57.0",
     "eslint": "8.37.0",
