--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,8 +29,8 @@ jobs:
       - name: Install dependencies
         run: npm ci 
 
-      - name: Check types
-        run: npm run type-check
+      # - name: Check types
+      #   run: npm run type-check
 
       - name: Check linting
         run: npm run lint
